test_regress/t/t_specparam_unsup.out
%Error: t/t_specparam_unsup.v:14:8: Can't find definition of variable: 'tdevice_PU'
   14 |       #tdevice_PU PoweredUp = 1'b1;
      |        ^~~~~~~~~~
%Error: Exiting due to
